force-app/main/default/objects/Quote_Audit_Log__c/Quote_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Quote Audit Log</label>
    <nameField>
        <displayFormat>AUD-{00000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>