force-app/main/default/objects/Quote_Audit_Log__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who made the change.</description>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>