force-app/main/default/objects/Quote_Audit_Log__c/fields/Field_Changed__c.field-meta.xml
<CustomField>
    <fullName>Field_Changed__c</fullName>
    <description>The API name of the field that was changed.</description>
    <label>Field Changed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>