force-app/main/default/objects/Quote_Audit_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable description of the change.</description>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>