force-app/main/default/objects/Quote_Audit_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>The new value of the field.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>