force-app/main/default/objects/Quote_Audit_Log__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>The previous value of the field.</description>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>