force-app/main/default/objects/Quote_Audit_Log__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific line item that was changed.</description>
    <label>Quote Line Item</label>
    <referenceTo>Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>